<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvEmptyState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp24"
        android:layout_margin="@dimen/dp12"
        app:cardCornerRadius="@dimen/dp6"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/llEmptyStateEmptyItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp8"
                android:gravity="center"
                android:textSize="@dimen/sp18" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCharacters"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        android:visibility="gone"
        tools:listitem="@layout/item_character"/>

    <ProgressBar
        android:id="@+id/cpiLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@android:style/Widget.ProgressBar"/>

</androidx.constraintlayout.widget.ConstraintLayout>