...
            android:layout_width="@dimen/dp150"
            android:layout_height="@dimen/dp150"
            android:transitionName="imageView"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="@dimen/sp25"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
...
